# rust_syscalls

./: Cargo.toml  README.MD
src/: lib.rs  obf.rs  syscall.rs  syscall_resolve.rs
